--- a/Scrabble/Views/Home/Index.cshtml
+++ b/Scrabble/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 @section scripts {
     <script type="text/javascript">
         $(function () {
-            const $tableRows = $('#leaderboard tr');
+            const $tableRows = $('#leaderboard tbody tr');
             $tableRows.click(function () {
                 let $this = $(this);
                 window.location.href = `@Url.Content("~/profile")/${$this.data('id')}`;
